--- a/app/src/main/res/layout/activity_image_view.xml
+++ b/app/src/main/res/layout/activity_image_view.xml
@@ -69,5 +69,5 @@
         android:layout_alignRight="@+id/iv_info"
         android:layout_alignEnd="@+id/iv_info"
         android:layout_marginTop="20dp"
-        android:id="@+id/imageView2" />
+        android:id="@+id/iv_warning" />
 </RelativeLayout>
