--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -26,35 +26,37 @@
     </android.support.design.widget.AppBarLayout>
 
 
-
-            <TextView
-                android:id="@+id/tv_fail_list_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_vertical_margin"
-                android:background="@color/colorbackgroud"
-                android:layout_below="@+id/abl"
-                android:padding="5dp"
-                android:text="@string/help_list_title"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/tv_info_size" />
+    <TextView
+        android:id="@+id/tv_fail_list_title"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/abl"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/colorbackgroud"
+        android:padding="5dp"
+        android:text="@string/help_list_title"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/tv_info_size" />
 
             <ListView
                 android:id="@+id/listViewFail"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="120dp"
                 android:layout_below="@+id/tv_fail_list_title"
                 android:layout_centerHorizontal="true"
-                android:layout_marginLeft="@dimen/activity_vertical_margin"
-                android:layout_marginRight="@dimen/activity_vertical_margin" />
+                android:layout_marginLeft="@dimen/activity_base_margin"
+                android:layout_marginRight="@dimen/activity_base_margin" />
 
             <TextView
                 android:id="@+id/tv_local_title"
                 android:layout_width="match_parent"
-                android:layout_height="5dp"
+                android:layout_height="2dp"
                 android:layout_below="@+id/listViewFail"
                 android:layout_centerHorizontal="true"
-                android:layout_margin="@dimen/activity_vertical_margin"
+                android:layout_margin="@dimen/activity_base_margin"
                 android:background="@android:color/white"
                 android:padding="5dp"
                 android:text=""
@@ -64,7 +66,7 @@
             <RelativeLayout
                 android:id="@+id/rl_button"
                 android:layout_width="match_parent"
-                android:layout_height="5dp"
+                android:layout_height="2dp"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="5dp">
@@ -77,7 +79,7 @@
                 android:layout_height="50dp"
                 android:background="@android:color/white"
                 android:layout_below="@+id/tv_local_title"
-                android:layout_marginLeft="@dimen/activity_vertical_margin" />
+                android:layout_marginLeft="@dimen/activity_base_margin" />
 
             <Spinner
                 android:id="@+id/spinner_city"
@@ -85,8 +87,8 @@
                 android:layout_height="50dp"
                 android:background="@android:color/white"
                 android:layout_below="@+id/spinner_province"
-                android:layout_marginLeft="@dimen/activity_vertical_margin"
-                android:layout_marginTop="@dimen/activity_vertical_margin" />
+                android:layout_marginLeft="@dimen/activity_base_margin"
+                android:layout_marginTop="@dimen/activity_base_margin" />
 
             <Spinner
                 android:id="@+id/spinner_area"
@@ -94,8 +96,8 @@
                 android:layout_height="50dp"
                 android:background="@android:color/white"
                 android:layout_below="@+id/spinner_city"
-                android:layout_marginLeft="@dimen/activity_vertical_margin"
-                android:layout_marginTop="@dimen/activity_vertical_margin" />
+                android:layout_marginLeft="@dimen/activity_base_margin"
+                android:layout_marginTop="@dimen/activity_base_margin" />
 
             <include
                 android:id="@+id/title"
@@ -103,22 +105,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_local_title"
-                android:layout_marginRight="@dimen/activity_vertical_margin"
-                android:layout_marginLeft="@dimen/activity_vertical_margin"
-                android:layout_toEndOf="@+id/tv_fail_list_title"
-                android:layout_toRightOf="@+id/tv_fail_list_title"></include>
+                android:layout_marginRight="@dimen/activity_base_margin"
+                android:layout_marginLeft="@dimen/activity_base_margin"
+                android:layout_toEndOf="@+id/spinner_province"
+                android:layout_toRightOf="@+id/spinner_province"></include>
 
-            <ListView
-                android:id="@+id/listViewAdrress"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_above="@+id/rl_button"
-                android:layout_below="@+id/title"
-                android:layout_marginRight="@dimen/activity_vertical_margin"
-                android:layout_marginLeft="@dimen/activity_vertical_margin"
-                android:layout_marginTop="5dp"
-                android:layout_toEndOf="@+id/tv_fail_list_title"
-                android:background="@android:color/white"
-                android:layout_toRightOf="@+id/tv_fail_list_title" />
+    <ListView
+        android:id="@+id/listViewAdrress"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_above="@+id/rl_button"
+        android:layout_below="@+id/title"
+        android:layout_marginRight="@dimen/activity_base_margin"
+        android:layout_marginLeft="@dimen/activity_base_margin"
+        android:layout_marginTop="1dp"
+        android:layout_toEndOf="@+id/spinner_province"
+        android:layout_toRightOf="@+id/spinner_province"
+        android:background="@android:color/white" />
 
 </RelativeLayout>
