--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="tv_info_size">24sp</dimen>
+    <dimen name="tv_info_size">22sp</dimen>
     <dimen name="btn_info_size">22sp</dimen>
+    <dimen name="activity_base_margin">10dp</dimen>
 </resources>
