--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -26,26 +26,34 @@
     </android.support.design.widget.AppBarLayout>
 
 
-    <TextView
-        android:id="@+id/tv_fail_list_title"
-        android:layout_width="120dp"
+    <!--<TextView-->
+        <!--android:id="@+id/tv_fail_list_title"-->
+        <!--android:layout_width="120dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@+id/abl"-->
+        <!--android:layout_marginBottom="5dp"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:layout_marginTop="5dp"-->
+        <!--android:background="@color/colorbackgroud"-->
+        <!--android:padding="5dp"-->
+        <!--android:text="@string/help_list_title"-->
+        <!--android:textColor="@android:color/white"-->
+        <!--android:textSize="@dimen/tv_info_size" />-->
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
         android:layout_below="@+id/abl"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="5dp"
-        android:background="@color/colorbackgroud"
-        android:padding="5dp"
-        android:text="@string/help_list_title"
-        android:textColor="@android:color/white"
-        android:textSize="@dimen/tv_info_size" />
-
+        android:layout_above="@+id/rl_button">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
             <ListView
                 android:id="@+id/listViewFail"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:layout_below="@+id/tv_fail_list_title"
+                android:layout_height="90dp"
+
                 android:layout_centerHorizontal="true"
                 android:layout_marginLeft="@dimen/activity_base_margin"
                 android:layout_marginRight="@dimen/activity_base_margin" />
@@ -63,28 +71,20 @@
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/tv_info_size" />
 
-            <RelativeLayout
-                android:id="@+id/rl_button"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="5dp">
 
-            </RelativeLayout>
 
             <Spinner
                 android:id="@+id/spinner_province"
-                android:layout_width="120dp"
-                android:layout_height="50dp"
+                android:layout_width="100dp"
+                android:layout_height="30dp"
                 android:background="@android:color/white"
                 android:layout_below="@+id/tv_local_title"
                 android:layout_marginLeft="@dimen/activity_base_margin" />
 
             <Spinner
                 android:id="@+id/spinner_city"
-                android:layout_width="120dp"
-                android:layout_height="50dp"
+                android:layout_width="100dp"
+                android:layout_height="30dp"
                 android:background="@android:color/white"
                 android:layout_below="@+id/spinner_province"
                 android:layout_marginLeft="@dimen/activity_base_margin"
@@ -92,8 +92,8 @@
 
             <Spinner
                 android:id="@+id/spinner_area"
-                android:layout_width="120dp"
-                android:layout_height="50dp"
+                android:layout_width="100dp"
+                android:layout_height="30dp"
                 android:background="@android:color/white"
                 android:layout_below="@+id/spinner_city"
                 android:layout_marginLeft="@dimen/activity_base_margin"
@@ -113,14 +113,32 @@
     <ListView
         android:id="@+id/listViewAdrress"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_above="@+id/rl_button"
-        android:layout_below="@+id/title"
+        android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/activity_base_margin"
         android:layout_marginLeft="@dimen/activity_base_margin"
-        android:layout_marginTop="1dp"
         android:layout_toEndOf="@+id/spinner_province"
         android:layout_toRightOf="@+id/spinner_province"
-        android:background="@android:color/white" />
-
+        android:background="@android:color/white"
+        android:layout_below="@+id/title" />
+</RelativeLayout>
+    </ScrollView>
+    <RelativeLayout
+        android:id="@+id/rl_button"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="5dp">
+        <Button
+            android:text="导航"
+            android:textSize="16sp"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:gravity="center"
+            android:layout_marginLeft="@dimen/activity_vertical_margin"
+            android:id="@+id/btn_line"
+            android:textColor="@android:color/white"
+            android:background="@drawable/border_button"
+            android:layout_alignParentLeft="true" />
+    </RelativeLayout>
 </RelativeLayout>
