--- a/app/src/main/res/layout/item_address.xml
+++ b/app/src/main/res/layout/item_address.xml
@@ -25,7 +25,7 @@
         android:padding="5dp"
         android:id="@+id/tv_title"
         android:ellipsize="end"
-        android:textSize="@dimen/tv_info_size"
+        android:textSize="14sp"
         android:gravity="left|center_vertical"
         android:layout_alignBottom="@+id/tv_address"
         android:layout_alignParentTop="true"
@@ -36,13 +36,13 @@
     <TextView
         android:text="备品电话 "
         android:textColor="@android:color/black"
-        android:layout_width="200dp"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:id="@+id/tv_spares_phone"
         android:maxLines="1"
         android:ellipsize="end"
-        android:textSize="@dimen/tv_info_size"
+        android:textSize="14sp"
         android:gravity="left|center_vertical"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/tv_work_Phone"
@@ -51,13 +51,13 @@
     <TextView
         android:text="24小时工作手机 "
         android:textColor="@android:color/black"
-        android:layout_width="180dp"
+        android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:id="@+id/tv_work_Phone"
         android:maxLines="1"
         android:ellipsize="end"
-        android:textSize="@dimen/tv_info_size"
+        android:textSize="14sp"
         android:gravity="left|center_vertical"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
@@ -71,7 +71,7 @@
         android:padding="5dp"
         android:id="@+id/tv_address"
         android:ellipsize="end"
-        android:textSize="@dimen/tv_info_size"
+        android:textSize="14sp"
         android:gravity="left|center_vertical"
         android:layout_below="@+id/tv_code"
         android:layout_toRightOf="@+id/tv_title"
@@ -79,34 +79,34 @@
         android:layout_alignParentEnd="true" />
 
     <TextView
-        android:text="服务电话 "
-        android:textColor="@android:color/black"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:id="@+id/tv_service_phone"
-        android:maxLines="1"
-        android:ellipsize="end"
-        android:textSize="@dimen/tv_info_size"
-        android:gravity="left|center_vertical"
-        android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/tv_spares_phone"
-        android:layout_toStartOf="@+id/tv_spares_phone" />
-
-    <TextView
         android:text="0431"
         android:textColor="@android:color/black"
-        android:layout_width="100dp"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:id="@+id/tv_code"
         android:maxLines="1"
         android:ellipsize="end"
-        android:textSize="@dimen/tv_info_size"
+        android:textSize="14sp"
         android:gravity="left|center_vertical"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/tv_service_phone"
         android:layout_toStartOf="@+id/tv_service_phone" />
+
+    <TextView
+        android:text="服务电话 "
+        android:textColor="@android:color/black"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:id="@+id/tv_service_phone"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:textSize="14sp"
+        android:gravity="left|center_vertical"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/tv_spares_phone"
+        android:layout_toStartOf="@+id/tv_spares_phone" />
 
 
 </RelativeLayout>
